--- a/infrastructure.yml
+++ b/infrastructure.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   connection: local
   tasks:
-    - name: Including ec2 role
+    - name: Including ec2 role for infrastructure creation
       include_role: 
         name: ec2
 
