--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -4,6 +4,6 @@
   gather_facts: no
   tasks:
     - name: Include tasks for load balancer control
-      include_role: 
+      include_role:
         name: ec2
-        tasks_from: ec2_loadbalancer
+        tasks_from: ec2_loadbalancer.yml
