--- a/loadbalancer.yml
+++ b/loadbalancer.yml
@@ -6,8 +6,8 @@
     - name: Include tasks for load balancer control
       vars:
         ec2_lb_filters:
-          "tag:Name": "{{ ec2_scope }}"
-          "instance-state-name": running
+          'tag:Name': "{{ ec2_scope }}"
+          'instance-state-name': running
       include_role:
         name: ec2
         tasks_from: ec2_loadbalancer.yml
