--- a/infrastructure.yml
+++ b/infrastructure.yml
@@ -5,8 +5,5 @@
   tasks:
     - name: Including ec2 role for infrastructure creation
       include_role:
-        name: ec2
-      vars:
-        ec2_lb_filters: 
-          'tag:Name': "{{ ec2_scope }}"
-          'instance-state-name': running
+        name: role-ec2
+      
