--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,12 @@
 ---
 - name: Install the application
   hosts: "*{{ scope }}"
-  gather_facts: yes
+  gather_facts: no
   become: yes
+  remote_user: ec2-user
   tasks:
-    - name: Install the "Is it cat" aplication from its role on {{ scope }} instances
+    - name: Install Apache from its role on {{ scope }} instances
       include_role:
-        name: is_it_cat
+        name: role-app
+        
+        
